initial web page

--- a/index.html
+++ b/index.html
@@ -1,85 +1,68 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Day 1</title>
-	<meta charset="utf-8">
-	<meta name="description" content="Free Web Tutorial">
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<title>My First</title>
+		<meta charset="utf-8">
+		<meta name="description" content="Personal Blog">
+	</head>
+	<body>
+		<header class="banner">
+			<h1>Tusi's Blog</h1>
+			<p>Welcome to my personal blog</p>
+			<link rel="stylesheet" type="text/css" href="home.css">
+		</header>
 
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+		<nav>
+			<ul>
+				<li><a href="personal.html">Personal Information</b></a></li>
+				<li><a href="achievement.html">Achievement</a></li>
+				<li><a href="about.html">About</a></li>
+			</ul>
+		</nav>
 
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
-	<!--<style>
-		h1{
-			color: #0066ff;
-		}
-		div.wording {
-			background-color: #99ccff;
-			padding: 10px;
-			margin: 5px;
-			border: 2px solid blue;
-			border-radius: 10px;
-		}
-		div.pict {
-			background-color: #0099ff;
-		}
-		img {
-			width: 300px;
-			height: auto;;
-		}
-	</style>-->
-</head>
-<body>
-	<div class="col-md-4">
-		<h1>Hello World</h1>
-		<p>
-			<strong>Lorem ipsum</strong> <em>dolor sit amet</em>, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-	</div>
+		<main>
+			<section>
+				<h2>University of Brawijaya</h2>
+				<article>
+					<h3>Faculty of Computer Science</h3>
+					<p>In the aims to produce graduates who are competent in field of Information Technology, Faculty of Computer Science (FILKOM) UB implement competency-based curriculum which refers to the ABET (Accreditation Board for Engineering and Technology). Supported by quality educators and adequate supporting infrastructure, FILKOM aims to produce graduates who have entrepreneurs spirite based on moral and ethical also trustworthy personality so being able cooperate and contribute to the national and international level.</p> 
+				</article>
+				<article>
+					<h3>Faculty of Computer Science Department and Programme</h3>
+					<p>Faculty of Computer Science Universitas Brawijaya (FILKOM UB) has two departments namely Departement of Informatics Engineering and Department of Information System. Department of Informatics Engineering consists of three programme namely Master of Computer Science Programme, Informatics Engineering Programme and Computer Engineering Programme. Meanwhile Department of Information System also consists of three programme namely Information Technology Education Programme, Information system Programme and Information Technology Programme.</p>
+				</article>
+			</section>
+			<section>
+				<h2>PT.BUKALAPAK.COM</h2>
+				<article>
+					<h3>Preliminary of Bukalapak</h3>
+					<p>PT Bukalapak.com (selanjutnya disebut “Bukalapak”) adalah suatu perseroan terbatas yang salah satu jenis usahanya bergerak di bidang jasa portal web. Bukalapak dalam hal ini menyediakan Platform perdagangan elektronik (e-commerce) di mana Pengguna dapat melakukan transaksi jual-beli barang dan menggunakan berbagai fitur serta layanan yang tersedia. Setiap pihak yang berada di wilayah Negara Kesatuan Republik Indonesia dapat mengakses Platform Bukalapak untuk kemudian membuka lapak, menjual barang, membeli barang, menggunakan fitur/layanan, atau hanya sekadar mengakses/mengunjungi Platform Bukalapak. Sebagai penunjang bisnis dan penyedia Platform perdagangan elektronik, Bukalapak menjamin keamanan dan kenyamanan bagi para Pengguna.</p> 
+				</article>
+				<article>
+					<h3>Definition List at Bukalapak</h3>
+					<ol>
+						<li>
+							Pengguna adalah pihak (terdaftar/tidak terdaftar) yang mengakses Platform Bukalapak, termasuk namun tidak terbatas pada Pembeli dan Penjual (Pelapak) serta wajib mematuhi Aturan Penggunaan Bukalapak beserta ketentuan-ketentuan lain termasuk namun tidak terbatas pada Kebijakan Privasi Bukalapak.
+						</li>
+						<li>
+							Akun adalah data tentang Pengguna, minimum terdiri dari username, password, nomor telepon, dan email yang wajib diisi oleh Pengguna Terdaftar.
+						</li>
+						<li>
+							Platform Bukalapak adalah situs resmi www.bukalapak.com dan seluruh microsite resmi beserta aplikasi resmi Bukalapak (berbasis Android dan iOS) yang dapat diakses melalui perangkat komputer dan/atau perangkat seluler Pengguna.
+						</li>
+					</ol>
+				</article>
+			</section>
+		</main>
+		
+		<aside>
+			<h2>Be a news reporter</h2>
+			<p>If you see news happening. Send us a Text</p>
+		</aside>
 
-	<div class="col-md-4">
-		<form>
-		  <div class="form-group">
-		    <label for="exampleInputEmail1">Email address</label>
-		    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-		  </div>
-		  <div class="form-group">
-		    <label for="exampleInputPassword1">Password</label>
-		    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-		  </div>
-		  <div class="form-group">
-		    <label for="exampleInputFile">File input</label>
-		    <input type="file" id="exampleInputFile">
-		    <p class="help-block">Example block-level help text here.</p>
-		  </div>
-		  <div class="checkbox">
-		    <label>
-		      <input type="checkbox"> Check me out
-		    </label>
-		  </div>
-		  <button type="submit" class="btn btn-primary">Submit</button>
-		</form>
-		<!--<ul type="square">
-			<li>Bola Sepak</li>
-			<li>Bola Volly</li>
-		</ul>
-		<ol type="i">
-			<li>Bola</li>
-			<li>Me</li>
-		</ol>-->
-	</div>
-
-	<div class="col-md-4">
-		<a href="https://www.w3schools.com/">Klik disini</a><br>
-		<img src="img/3.jpeg" class="img-responsive" alt="picture">
-	</div>
-</body>
+		<footer>
+			<p>Footer Information</p>	
+		</footer>
+	</body>
 </html>
